Incremental Atmosphere migration to JDK 21+ new features
Including samples integration and new TypeScript JavaScript client